# blazer

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE1_SPEC.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
crates/engine/: Cargo.toml
crates/engine/benches/: groupby_bench.rs  mlx_bench.rs
crates/engine/src/: dtype.rs  error.rs  lib.rs  schema.rs
crates/engine/src/compute/: backend.rs  executor.rs  mlx_backend.rs  mod.rs  parallel_scan.rs  streaming.rs  streaming_planner.rs
crates/engine/src/dataframe/: mod.rs
crates/engine/src/dataset/: mod.rs
crates/engine/src/expr/: mod.rs
crates/engine/src/io/: mod.rs  parquet_dict.rs  parquet_stream.rs  sink.rs  spill.rs
crates/engine/src/lazy/: mod.rs
crates/engine/src/series/: mod.rs
crates/engine/tests/: integration.rs  streaming_tests.rs
crates/mlx-sys/: Cargo.toml  build.rs
crates/mlx-sys/src/: lib.rs
crates/mlx-sys/src/shim/: mlx_shim.cpp  mlx_shim.h
crates/node-bindings/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/node-bindings/src/: lib.rs
crates/py-bindings/: Cargo.toml  README.md  pyproject.toml
crates/py-bindings/python/blazer/: __init__.py  __init__.pyi
crates/py-bindings/src/: lib.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/src/: lib.rs
crates/tauri-app/src/commands/: files.rs  query.rs
crates/tauri-app/ui/: index.html  package.json
crates/tauri-app/ui/src/components/Chat/: DataFrameTable.tsx  InputBar.tsx  QueryBlock.tsx
crates/tauri-app/ui/src/components/Settings/: ApiKeyInput.tsx  ProviderToggle.tsx  SettingsPanel.tsx  TemperatureSlider.tsx
docs/: index.html
mlx-bridge/: CMakeLists.txt  blaze_mlx.cpp  blaze_mlx.h
playground/: Cargo.toml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.ts  tauri.conf.json  tsconfig.json
playground/capabilities/: default.json
playground/electron/: main.ts  preload.ts
playground/electron/ipc/: executor.ts  llm.ts  settings.ts
playground/icons/: icon.icns
playground/scripts/: build-native.sh
playground/src/: App.tsx  global.css  index.html  lib.rs  main.rs  main.tsx
playground/src/commands/: duckdb.rs  files.rs  llm.rs  mod.rs  query.rs  settings.rs  tools.rs
playground/src/components/Chat/: ChatContainer.tsx  CodeBlock.tsx  DataFrameTable.tsx  InputBar.tsx  MessageBubble.tsx  MessageList.tsx
playground/src/components/Results/: ResultsPanel.tsx
playground/src/components/Settings/: ApiKeyInput.tsx  ModelSelector.tsx  ProviderToggle.tsx  SettingsPanel.tsx  TemperatureSlider.tsx
playground/src/hooks/: useChat.ts  useCodeExecution.ts  useSettings.ts
playground/src/lib/: parseResponse.ts  skills.ts  systemPrompt.ts  types.ts
playground/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
playground/ui/src/: App.tsx  global.css  main.tsx
playground/ui/src/__tests__/components/: LogPanel.test.tsx
playground/ui/src/__tests__/hooks/: sqlParsing.test.ts
playground/ui/src/__tests__/lib/: appLog.test.ts  db.test.ts  fileAlias.test.ts  readExpr.test.ts
playground/ui/src/components/: CommandPalette.tsx  DataExplorer.tsx
playground/ui/src/components/Chat/: AgenticTimeline.tsx  AutoProfileCard.tsx  ChatStreamContext.ts  DataFrameTable.tsx  InputBar.tsx  MessageBubble.tsx  MessageList.tsx  PlanBlock.tsx  QueryBlock.tsx  StreamingIndicator.tsx  ToolCallChip.tsx
playground/ui/src/components/Console/: CodeEditor.tsx  ConsoleEditor.tsx  QueryHistory.tsx  SnippetsLibrary.tsx
playground/ui/src/components/LogPanel/: LogPanel.tsx
playground/ui/src/components/ResultPane/: ChartView.tsx  ColumnStatsPopover.tsx  ResultPane.tsx
playground/ui/src/components/SchemaExplorer/: ProfilerView.tsx  SchemaExplorer.tsx
playground/ui/src/components/Settings/: ApiKeyInput.tsx  ExtensionsPanel.tsx  ModelSelector.tsx  ProviderToggle.tsx  SettingsPanel.tsx  TemperatureSlider.tsx
playground/ui/src/hooks/: useChat.ts  useDarkMode.ts  useKeyboardShortcuts.ts  usePersistedState.ts  useProfiler.ts  useQueryHistory.ts  useSchema.ts  useSettings.ts  useSnippets.ts
playground/ui/src/lib/: ConnectionsContext.ts  appLog.ts  autoProfile.ts  db.ts  fileAlias.ts  markdownIcons.tsx  platform.ts  readExpr.ts  skills.ts  types.ts
playground/ui/src/lib/llm/: toolCallSupport.ts  toolSchemas.ts
playground/ui/src/lib/tools/: executeToolCall.ts
playground/ui/src/test/: setup.ts
