[package]
name = "blazer-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "blazer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blazer-engine = { path = "../crates/engine" }
arrow2 = { version = "0.18" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
duckdb = { version = "1", features = ["bundled"] }
