[package]
name = "blazer-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow2 = { version = "0.18", features = [
    "io_parquet",
    "io_csv_read",
    "io_csv_write",
    "compute",
    "compute_sort",
    "compute_hash",
    "io_ipc",
] }
rayon = "1.10"
ahash = "0.8"
thiserror = "1.0"
regex = "1.10"
tempfile = "3.10"
mlx-sys = { path = "../mlx-sys", optional = true }

[features]
default = ["simd"]
simd = []
mlx = ["mlx-sys"]
cuda = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "groupby_bench"
harness = false
