[package]
name = "blazer-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
blazer-engine = { path = "../engine" }
arrow2 = { version = "0.18", features = ["compute"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
